# FlyDesk

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
demo/: Dockerfile  README.md  app.py  demo_provider.py  docker-compose.demo.yml  generate.py  prometheus.demo.yml  promtail-config.yml  requirements.txt  seed.py  stats_exporter.py
demo/grafana-provisioning/dashboards/: dashboards.yml  flydesk-demo-app.json  flydesk-demo-infra.json  flydesk-demo-logs.json
demo/static/: index.html
docs/: DEPLOYMENT.md  LIVE_CAPTURE.md
docs/adr/: 0001-provider-abstraction.md  0002-pydantic-anti-corruption-layer.md  0003-mongodb-via-repository.md  0004-idempotent-bookings.md  0005-outbox-and-idempotent-consumers.md  0006-booking-saga.md  0007-observability.md  0008-demo-cockpit.md
flydesk/bookings/: apps.py  repository.py  saga.py  serializers.py  services.py  urls.py  views.py
flydesk/common/: config.py  exceptions.py  logging.py  metrics.py  middleware.py  mongo.py  observability.py  redis_client.py  resilience.py
flydesk/domain/: __init__.py  enums.py  models.py
flydesk/events/: __init__.py  apps.py  consumers.py  dedupe.py  publisher.py  relay.py  topics.py
flydesk/events/management/commands/: consume_events.py  relay_outbox.py
flydesk/providers/: __init__.py  base.py  mock.py
flydesk/providers/amadeus/: mapper.py  provider.py  schemas.py
flydesk/providers/duffel/: async_client.py  client.py  mapper.py  schemas.py
flydesk/search/: apps.py  async_service.py  cache.py  serializers.py  services.py  urls.py  views.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: flydesk.json
scripts/: capture_duffel.py
tests/: conftest.py  test_amadeus_mapper.py  test_async_search.py  test_bookings_flow.py  test_consumers.py  test_domain_models.py  test_duffel_mapper.py  test_duffel_provider.py  test_integration_mongo.py  test_observability.py  test_outbox_relay.py  test_resilience.py  test_saga.py  test_search_cache.py  test_search_endpoint.py
tests/fixtures/: README.md
tests/fixtures/amadeus/: flight_create_orders_response.json  flight_offers_price_response.json  flight_offers_search_response.json
tests/fixtures/duffel/: offer_get_response.json  offer_request_response.json  order_create_response.json
