[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flydesk"
version = "0.1.0"
description = "Corporate flight booking backend — provider-agnostic search & booking over Duffel/Amadeus. Portfolio project."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Kuba Lichosik" }]

dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymongo>=4.7",
    "redis>=5",
    "aiokafka>=0.10",
    "prometheus-client>=0.20",
    "sentry-sdk>=2.0",
    "python-dotenv>=1.0",
    "gunicorn>=22.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mongomock>=4.1",
    "fakeredis>=2.23",
    "testcontainers[mongodb]>=4.0",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.setuptools.packages.find]
include = ["flydesk*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "DJ"]
ignore = ["E501"]  # black handles line length

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
# The default run stays hermetic (respx/mongomock/fakeredis). Integration tests
# need Docker (testcontainers) and are opt-in: `pytest -m integration`.
addopts = "-q -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: needs Docker (testcontainers); excluded from the default run",
]
